# snake

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml
.github/workflows/: build_package.yml
docs/: algorithms.md  conf.py  contributing.rst  index.rst  snake.base.rst  snake.rst  snake.util.rst
docs/_build/doctrees/: authors.doctree  code_of_conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  readme.doctree  reference.doctree  requirements.doctree  snake.base.doctree  snake.doctree  snake.solver.doctree  snake.solver.dqn.doctree  snake.util.doctree  usage.doctree
docs/_build/doctrees/_generate/: cornflakes.apply_match.doctree  cornflakes.attach_log.doctree  cornflakes.builder.generate_config_group_module.doctree  cornflakes.builder.generate_config_module.doctree  cornflakes.builder.generate_enum_module.doctree  cornflakes.cli.bump_version.doctree  cornflakes.cli.cli.doctree  cornflakes.cli.update_deps.doctree  cornflakes.common.check_type.doctree  cornflakes.common.datetime_ms.doctree  cornflakes.common.default_ca_path.doctree  cornflakes.common.extract_var_names.doctree  cornflakes.common.get_actual_type.doctree  cornflakes.common.get_method_definition.doctree  cornflakes.common.get_method_type_hint.doctree  cornflakes.common.has_return_statement.doctree  cornflakes.common.patch_module.doctree  cornflakes.common.recursive_update.doctree  cornflakes.common.type_to_str.doctree  (+24 more)
docs/_build/html/: .buildinfo  authors.html  code_of_conduct.html  contributing.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  readme.html  reference.html  requirements.html  search.html  searchindex.js  snake.base.html  snake.html  snake.solver.dqn.html  snake.solver.html  snake.util.html  usage.html
docs/_generate/: cornflakes.apply_match.rst  cornflakes.attach_log.rst  cornflakes.builder.generate_config_group_module.rst  cornflakes.builder.generate_enum_module.rst  cornflakes.cli.bump_version.rst  cornflakes.cli.update_deps.rst  cornflakes.common.check_type.rst  cornflakes.common.default_ca_path.rst  cornflakes.common.extract_var_names.rst  cornflakes.common.get_actual_type.rst  cornflakes.common.type_to_str.rst  cornflakes.common.unquoted_string.rst  cornflakes.decorator.Index.rst  cornflakes.decorator.click_cli.rst  cornflakes.decorator.config.rst  cornflakes.decorator.dataclass.rst  cornflakes.eval_csv.rst  cornflakes.eval_datetime.rst  cornflakes.eval_type.rst  cornflakes.logging.attach_log.rst  cornflakes.logging.setup_logging.rst  cornflakes.packaging.bump_version.rst  cornflakes.packaging.update_deps.rst  cornflakes.parser.yaml_load.rst  cornflakes.setup_logging.rst  cornflakes.yaml_load.rst
docs/_static/: basic.css
docs/algorithms/: algorithms.md
makefiles/: Linux.mk  Windows.mk
snake/: game.py  gui.py
snake/base/: snake.py
snake/solver/dqn/: __init__.py  history.py
tests/base/: test_snake.py
tools/: plot_dqn_compare.py
(+86 files in other folders)
